--- a/html/personalindex.html
+++ b/html/personalindex.html
@@ -9,20 +9,22 @@
 
     <title>笔记本</title>
 
+    <link href="../assets/js/fullcalendar/bootstrap-fullcalendar.css" rel="stylesheet"/>
+
+    <!-- Bootstrap core CSS -->
     <!-- Bootstrap core CSS -->
     <link href="../assets/css/prettify.css" type="text/css">
-    <script src="../assets/js/jquery.js"></script>
+    <!--<script src="../assets/js/jquery.js"></script>-->
     <script src="../assets/js/jquery-1.8.3.min.js"></script>
     <script src="../assets/js/bootstrap.min.js"></script>
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
-    <link href="../assets/css/summernote.css" rel="stylesheet">
-
     <link href="../assets/css/create.css" rel="stylesheet">
     <!--external css-->
     <link href="../assets/lineicons/style.css" rel="stylesheet"/>
     <link href="../assets/font-awesome/css/font-awesome.css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="../assets/js/gritter/css/jquery.gritter.css"/>
 
+    <script src="http://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>
     <!-- Custom styles for this template -->
     <link href="../assets/css/style.css" rel="stylesheet">
     <link href="../assets/css/style-responsive.css" rel="stylesheet">
@@ -207,22 +209,6 @@
             </ul>
             <!--  notification end -->
         </div>
-        <div class="col-sm-5" style="text-align: center; padding-top: 10px;">
-            <form action="#"><!--这里是搜索的表单-->
-                <div class="input-group">
-                    <div class="input-icon-group">
-
-                        <input type="text" class="form-control fc-clear" onkeydown='if(event.keyCode==13){gosubmit();}'>
-                        <span id="scan" data-role="md" class="md md-center-focus-weak fa-lg input-icon input-icon-md" style="display: inline;"></span>
-                    </div>
-                    <span class="input-group-btn">
-                        <button class="btn btn-primary" type="submit">
-                            搜索
-                        </button>
-                    </span>
-                </div>
-            </form>
-        </div>
         <div class="top-menu">
             <ul class="nav pull-right top-menu">
                 <li><a class="logout" href="login.html">Logout</a></li>
@@ -264,47 +250,114 @@
     MAIN CONTENT
     *********************************************************************************************************************************************************** -->
     <!--main content start-->
-    <section class="col-md-9" id="main-content" style="height: 70%;width: 80%;position: absolute;margin-top:5px ">
+    <section class="col-md-9" id="main-content" style="height: 70%;width: 80%;position: absolute;margin-top:20px " >
+        <section class="createwrap" ng-app="" ng-init="focus=123456789;foer=987654321;like=12;conment=14">
+            <!--<input type="button" class="btn btn-success  btn-s" value="修改" id="chang">-->
+            <!--<div>-->
+                <!--<div id="summernote"><h1>Hello S</h1>-->
+                    <!--<p>ummern<span style="background-color: rgb(255, 0, 0);">ote13<font color="#ffd663">多福多寿<font-->
+                            <!--face="Arial Black">艾斯<b>德斯多</b></font></font></span></p></div>-->
+            <!--</div>-->
+            <aside  class="col-md-2 mt"  >
+                <section class="panel panel-default" style="text-align: center">
+                    <a href="focuslist.html"><h4>关注了</h4>
+                        <h5>{{ focus|number }}</h5></a>
+                    <!--<hr size="1" color="#999999">-->
+                    <hr color="red" width="100%" size="100%">
+                    <h4>关注者</h4>
+                    <h5>{{ foer|number }}</h5>
+                    </div>
+                </section>
+            </aside>
+            <aside class="col-md-10 mt">
+                <section class="panel panel-default">
+                    <div class="panel-body">
+                        <ul id="myTab"  class="nav nav-tabs">
+                            <li class="active"><a href="#jmeter" data-toggle="tab">点赞<br><small>{{ like|number }}</small></a></li>
+                            <li class="dropdown">
+                                <a href="#ejb" data-toggle="tab">评论<br><small>{{ conment|number }}</small></a>
+                            </li>
+                        </ul>
+                        <div id="myTabContent"style="height: 500px" class="tab-content">
+                            <div class="tab-pane fade in active" id="jmeter">
+                                <span class="www">
+                                    <h5>有人觉得您的文章很赞</h5>
+                                    <div style="width:100px; height:100px; border-radius:50%; overflow:hidden;">
+                                        <img style="width:100px; height:100px;" src="../assets/img/1.jpg">
+                                    </div>
+                                    <p><em>jarvis:  </em>您写得文章太好的</p>
+                                </span><span class="www">
+                                    <h5>有人觉得您的文章的范德萨发生大发</h5>
+                                    <div style="width:100px; height:100px; border-radius:50%; overflow:hidden;">
+                                        <img style="width:100px; height:100px;" src="../assets/img/1.jpg">
+                                    </div>
+                                    <p><em>jarvis:  </em>您写得文章太好的</p>
+                                </span>
+                            </div>
+                            <div class="tab-pane fade" id="ejb">
+                                <span class="www">
+                                    <h5>别人评论了你的文章</h5>
+                                    <p style="text-indent:2em;">Enterprise Java Beans（EJB）是一个创建高度可扩展性和强大企业级应用程序的开发架构，部署在兼容应用程序服务器（比如 JBOSS、Web Logic 等）的 J2EE 上。</p>
+                                        <div id="conment-123456"style="text-align: inherit">
+                                            <small><em>jarvis:  </em>123456789</small><br>
+                                            <small><em>jarvis:  </em>123456789</small><br>
+                                        </div>
+                                    </p>
+                                    <a href='#collapseOne-123456' data-toggle="collapse"> <i class='fa fa-comment'></i>
+                                    </a>
+                                    <div class="collapse" id="collapseOne-123456">
+                                        <div class="input-sm col-sm-8">
+                                            <input type="text" id="conmenttext-123456" class="form-control" style="height: 90%">
+                                        </div>
+                                        <button type="submit" class="su" textid="123456">提交</button>
+                                    </div>
+                                </span>
+                                <span class="www">
+                                    <h5>别人评论了你的文章</h5>
+                                    <p style="text-indent:2em;">Enterprise Java Beans（EJB）是一个创建高度可扩展性和强大企业级应用程序的开发架构，部署在兼容应用程序服务器（比如 JBOSS、Web Logic 等）的 J2EE 上。</p>
+                                        <div id="conment-456"style="text-align: inherit">
+                                            <small><em>jarvis:  </em>123456789</small><br>
+                                            <small><em>jarvis:  </em>123456789</small><br>
+                                        </div>
+                                    </p>
+                                    <a href='#collapseOne-456' data-toggle="collapse"> <i class='fa fa-comment'></i>
+                                    </a>
+                                    <div class="collapse" id="collapseOne-456">
+                                        <div class="input-sm col-sm-8">
+                                            <input type="text" id="conmenttext-456" class="form-control" style="height: 90%">
+                                        </div>
+                                        <button type="submit" class="su" textid="456">提交</button>
+                                    </div>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </aside>
 
-        <section class="createwrap">
-            <div style="text-align: center">
-                <h1 >旭，这里是标题，需要添加</h1>
-                <input type="button" class="btn btn-success  btn-s" value="修改" id="chang">
-                <a href='javascript:void(0);' onclick="changlike()"> <i id="like" style="font-size: 25px" class='fa fa-heart-o'></i></a>
-            </div>
 
-            <div>
-                <div id="summernote"><h4>272行：如果不是自己账户是修改不了的，如果是别人，272行应整个删除或者隐藏</h4>
-                    <h4>290行：初始化评论在290行的div下搞（id为comment）搜索是用表单的</h4>
-                    <h4>277行：文章直接把标签贴到277行的&lt;<span style="font-family: 宋体; font-size: 12pt; color: rgb(0, 0, 128); background-color: rgb(239, 239, 239); font-weight: bold;">div </span><span style="font-family: 宋体; font-size: 12pt; color: rgb(0, 0, 255); background-color: rgb(239, 239, 239); font-weight: bold;">id=</span><span style="font-family: 宋体; font-size: 12pt; color: rgb(0, 128, 0); background-color: rgb(239, 239, 239); font-weight: bold;">"summernote"&gt;</span>&nbsp; &nbsp; 里面。</h4>
-                </div>
-            </div>
+            <aside class="col-md-12 mt">
+                <section class="panel panel-default">
+                    <div class="panel-body">
+                        <div id="calendar" class="has-toolbar"></div>
+                    </div>
+                </section>
+            </aside>
         </section>
         <! --/wrapper -->
-        <div style="text-align: center;"><input style="display:none;" type="button" class="btn btn-success btn-lg btn-s"
-                                                value="提交" hidden="true" id="submit"></div>
+        <!--<div style="text-align: center;"><input style="display:none;" type="button" class="btn btn-success btn-lg btn-s"-->
+                                                <!--value="提交" hidden="true" id="submit"></div>-->
 
 
-        <div id="commentarea">
-            <hr color="red" width="100%" size="100%">
-            <h3>评论区</h3>
-            <div class="container" id="comment">
-                <h4><strong>jarvis:</strong><div style="text-indent:2em;">123456</div></h4>
-            </div>
-            <a href='#collapseOne' data-toggle="collapse"> <i class='fa fa-comment' style="font-size: 25px"></i>
-            </a>
-            <div class="collapse" id="collapseOne">
-                <div class="input-sm col-sm-8">
-                    <input type="text" id="conmenttext" class="form-control">
-                </div>
-                <button type="submit" class="su btn btn-primary" >提交</button>
-            </div>
-        </div>
     </section><!-- /MAIN CONTENT -->
 
 </section>
 
 <!-- js placed at the end of the document so the pages load faster -->
+
+<script src="../assets/js/fullcalendar/fullcalendar.min.js"></script>
+<!--<script src="../assets/js/calendar-conf-events.js"></script>-->
+
 
 <script class="include" type="text/javascript" src="../assets/js/jquery.dcjqaccordion.2.7.js"></script>
 <script src="../assets/js/jquery.scrollTo.min.js"></script>
@@ -316,47 +369,17 @@
 
 <!--script for this page-->
 <script type="text/javascript" src="../assets/js/gritter/js/jquery.gritter.js"></script>
-<script src="../assets/js/summernote.js"></script>
-<script src="../assets/css/lang/summernote-zh-CN.js"></script>
+<!--<script src="../assets/css/lang/summernote-zh-CN.js"></script>-->
 <script type="text/javascript" src="../assets/js/gritter-conf.js"></script>
 <script>
-    var like = false;
-    likefun()
-    function changlike() {
-        like = !like;
-        $.ajax({
-            type:"POST",
-            url: "127.0.0.1",
-            data :{like:like,textid:addressid},
-            xhrFields: {
-                withCredentials: true
-            },
-            crossDomain: true,
-            error:function(XMLHttpRequest, textStatus, errorThrown) {//请求错误
-                likefun();
-                alert(XMLHttpRequest.status+XMLHttpRequest.readyState+textStatus);
-            },
-            success:function(data){
-                $("#collapseOne").collapse('hide')
-                if(data.errCode==-1){
-                    alert(-1)
-                    //                          逻辑错误的操作
-                }else if(data.errCode == 0){
-                    //成功进行解析显示
-                    alert(1)
-                }
-            }
-        });
-    }
-    function likefun() {
-        if(like){
-            $("#like").attr("class","fa fa-heart");
-        }else{
-            $("#like").attr("class","fa fa-heart-o");
-        }
-    }
+    //设置高度
+//    var obj = document.getElementById("myTabContent");
+//    var height = document.body.clientHeight;
+//    obj.style.cssText = "height:"+height*0.8;
+</script>
+<script>
     var string1 = "poi1:1*poi2:2*kuma:#*kuma1:4*wo:#*!*!*poi3:3*!*";//"2:mt*3:#*5:mt*6:mt*!*4:mt";
-    //文件目录树反序列
+//文件目录树反序列
     function i(string) {
         if(string == null||string == ""){
             document.getElementById("nav-accordion").innerHTML = "<a style='color: white' href='login.html'><h1 class='centered'>请先登录</h1></a>";
@@ -404,66 +427,6 @@
     //      }
 </script>
 
-<script>/**
- 修改件
- **/
-$("#chang").click(function () {
-    $("#chang").hide();
-    $("#submit").show();
-    $("#commentarea").hide();
-    $("#like").hide();
-    var height = $(window).height() * 0.7;
-    $(document).ready(function () {
-        $('#summernote').summernote({
-            toolbar: [
-                ['style', ['style']],
-                ['font', ['bold', 'underline', 'clear']],
-                ['fontname', ['fontname']],
-                ['color', ['color']],
-                ['para', ['ul', 'ol', 'paragraph']],
-                ['table', ['table']],
-                ['insert', ['link', 'picture']],
-                ['view', ['codeview']],
-            ],
-            height: height,                 // set editor height
-            minHeight: height,             // set minimum height of editor
-            maxHeight: height,             // set maximum height of editor
-            focus: true,                  // set focus to editable area after initializing summernote
-            lang: 'zh-CN'
-        });
-    })
-})
-</script>
-<script>
-    //上传文本操作
-    //alert(location.href);
-    var ad = location.href;
-    var t = ad.split("/");
-    var addressid = t[t.length - 1];
-    $('#submit').click(function () {
-        $.ajax({
-            type: "POST",
-            url: address,
-            data: {text: $("#summernote").html(), id: addressid},
-            xhrFields: {
-                withCredentials: true
-            },
-            crossDomain: true,
-            error: function (XMLHttpRequest, textStatus, errorThrown) {//请求错误
-                alert(XMLHttpRequest.status + XMLHttpRequest.readyState + textStatus);
-            },
-            success: function (data) {
-                if (data.errCode == -1) {
-                    alert(-1)
-                    //                          逻辑错误的操作
-                } else if (data.errCode == 0) {
-                    //成功进行解析显示
-                    alert(1)
-                }
-            }
-        });
-    })
-</script>
 <script>
     $(".click").click(function () {
         var address = $(this).attr("address");
@@ -496,7 +459,40 @@ $("#chang").click(function () {
 //        })
     });
 </script>
+<script>
+    $('.su').click(function () {
+        var id = $(this).attr("textid");
+//        alert($("#conmenttext-"+id).val());
+        var conment = $("#conmenttext-"+id).val();
+        $("#conmenttext-"+id).val("");
+        $.ajax({
 
+            type:"POST",
+            url: "127.0.0.1",
+            data :{commnet:conment,textid:id},
+            xhrFields: {
+                withCredentials: true
+            },
+            crossDomain: true,
+            error:function(XMLHttpRequest, textStatus, errorThrown) {//请求错误
+                $("#collapseOne-"+id).collapse('hide')
+                window.location.reload()
+                alert(XMLHttpRequest.status+XMLHttpRequest.readyState+textStatus);
+            },
+            success:function(data){
+                $("#collapseOne-"+id).collapse('hide')
+                if(data.errCode==-1){
+                    alert(-1)
+                    //                          逻辑错误的操作
+                }else if(data.errCode == 0){
+                    //成功进行解析显示
+//                $(".collapse").collapse(hide)
+                    alert(1)
+                }
+            }
+        });
+    })
+</script>
 <script>
 
 </script>
@@ -620,48 +616,51 @@ $("#chang").click(function () {
     });
 </script>
 
+
 <script>
-    //评论
-    $('.su').click(function () {
-       // var id = $(this).attr("textid");
-//        alert($("#conmenttext-"+id).val());
-        var conment = $("#conmenttext").val();
-        $("#conmenttext").val("");
-        $.ajax({
-
-            type:"POST",
-            url: "127.0.0.1",
-            data :{commnet:conment,textid:addressid},
-            xhrFields: {
-                withCredentials: true
+    //日历初始化
+    var Script = function () {
+        var date = new Date();
+        var d = date.getDate();
+        var m = date.getMonth();
+        var y = date.getFullYear();
+        $('#calendar').fullCalendar({
+            header: {
+                left: 'prevYear,prev,today,next,nextYear',
+                center: 'title',
+                right: 'month,basicWeek,basicDay'
             },
-            crossDomain: true,
-            error:function(XMLHttpRequest, textStatus, errorThrown) {//请求错误
-                //addcomment("456","jarvis");
-                $("#collapseOne").collapse('hide');
-
-                alert(XMLHttpRequest.status+XMLHttpRequest.readyState+textStatus);
+            editable: false,
+            droppable: false,
+            titleFormat: {
+                month: 'MMMM yyyy', // September 2009
+                week: "MMM d[ yyyy]{'&#8212;'[ MMM] d yyyy}", // Sep 7 - 13 2009
+                day: 'dddd, MMM d, yyyy'// Tuesday, Sep 8, 2009
             },
-            success:function(data){
-                $("#collapseOne").collapse('hide')
-                if(data.errCode==-1){
-                    alert(-1)
-                    //                          逻辑错误的操作
-                }else if(data.errCode == 0){
-                    //成功进行解析显示
-//                $(".collapse").collapse(hide)
-                    alert(1)
+            events: [
+                                {
+                    title: 'Lunch',
+                    start: new Date(y, m, d, 12, 0),
+                    end: new Date(y, m, d, 14, 0),
+                    allDay: false,
+                    url: 'http://google.com/'
+                },
+                {
+                    title: 'Birthday Party',
+                    start: new Date(y, m, d + 1, 19, 0),
+                    end: new Date(y, m, d + 1, 22, 30),
+                    allDay: false,
+                    url: 'http://google.com/'
+                },
+                {
+                    title: 'Click for Google',
+                    start: new Date(y, m, 28),
+                    end: new Date(y, m, 29),
+                    url: 'http://google.com/'
                 }
-            }
+            ]
         });
-    })
-    function addcomment(co,user) {
-        var commentString ='<h4><strong>'+user+':</strong><div style="text-indent:2em;">'+co+'</div></h4>';
-        document.getElementById("comment").innerHTML += commentString;
-    }
+    }();
 </script>
-
-
-
 </body>
 </html>
