--- a/html/personalindex.html
+++ b/html/personalindex.html
@@ -24,7 +24,7 @@
     <link href="../assets/font-awesome/css/font-awesome.css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="../assets/js/gritter/css/jquery.gritter.css"/>
 
-    <script src="http://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>
+    <script src="../assets/js/angular.min.js"></script>
     <!-- Custom styles for this template -->
     <link href="../assets/css/style.css" rel="stylesheet">
     <link href="../assets/css/style-responsive.css" rel="stylesheet">
